--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild":"move build/*.* ./docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
